# YTdownload

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: app.py  cli.py  web_app.py
src/static/: styles.css
src/templates/: index.html
tests/: test_app.py
